# Cpp_Numpy_C_api

./: CMakeLists.txt  numpycpp_1.cpp  numpycpp_2.cpp  numpycpp_3.cpp
